--- a/app/src/main/res/layout-land/fragment_register.xml
+++ b/app/src/main/res/layout-land/fragment_register.xml
@@ -13,14 +13,14 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="@dimen/_200sdp"
             android:background="@drawable/card_view_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.cardview.widget.CardView
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             app:cardCornerRadius="16dp"
             app:layout_constraintBottom_toTopOf="@+id/cv_registerCard"
             app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,8 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:cardCornerRadius="@dimen/_32sdp"
-            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/bottom"
@@ -57,20 +58,20 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/alata"
                     android:text="@string/register"
-                    android:textSize="42sp"
+                    android:textSize="32sp"
                     android:textStyle="bold"
 
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.06"
+                    app:layout_constraintHorizontal_bias="0.03"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.06" />
+                    app:layout_constraintVertical_bias="0" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/tfFullName"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_32sdp"
                     android:hint="@string/fullName"
                     app:boxCornerRadiusBottomEnd="8dp"
                     app:boxCornerRadiusBottomStart="8dp"
@@ -80,7 +81,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tvRegister"
-                    app:layout_constraintVertical_bias="0.2"
+                    app:layout_constraintVertical_bias="0"
                     >
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -92,7 +93,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/tfEmail"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_32sdp"
                     android:hint="@string/email"
                     app:boxCornerRadiusBottomEnd="8dp"
                     app:boxCornerRadiusBottomStart="8dp"
@@ -113,7 +114,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/tfPassword"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_32sdp"
                     android:hint="@string/password"
                     app:boxCornerRadiusBottomEnd="8dp"
                     app:boxCornerRadiusBottomStart="8dp"
@@ -135,8 +136,7 @@
                 <CheckBox
                     android:id="@+id/cbPrivacy"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
+                    android:layout_height="32dp"
                     android:text="@string/terms_and_privacy"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
