--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -41,6 +41,7 @@
             android:layout_height="0dp"
             app:cardCornerRadius="@dimen/_32sdp"
             android:layout_margin="10dp"
+            app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/bottom"
@@ -156,6 +157,7 @@
             android:translationZ="2dp"
             android:fontFamily="@font/alata"
             android:text="@string/register"
+            android:elevation="4dp"
             app:layout_constraintBottom_toBottomOf="@id/cv_registerCard"
             app:layout_constraintTop_toBottomOf="@id/cv_registerCard"
             app:layout_constraintEnd_toEndOf="@id/cv_registerCard"
