--- a/app/src/main/res/navigation/splash_nav.xml
+++ b/app/src/main/res/navigation/splash_nav.xml
@@ -8,7 +8,11 @@
         android:id="@+id/introPage"
         android:name="com.example.pocketpal.SplashActivity.splashFrag.introPage"
         android:label="introPage1"
-        tools:layout="@layout/fragment_intro_page"/>
+        tools:layout="@layout/fragment_intro_page">
+        <action
+            android:id="@+id/action_introPage_to_registerFragment"
+            app:destination="@id/registerFragment" />
+    </fragment>
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.example.pocketpal.SplashActivity.splashFrag.RegisterFragment"
